# WebProjects

./: README.md
LittRed_vue/: App.vue  Counter.vue
LittRed_vue/my-app/: package-lock.json  package.json
LittRed_vue/my-app/src/: App.vue  hackernews.json
Postdb_tortoise/: README.md  main.py  models.py  post_data.db  pyproject.toml
Postdb_tortoise/tests/: .coverage  README.md  test.py  test_withoutdb.py
Postdb_tortoise/tests/__pycache__/: test.cpython-311-pytest-7.2.0.pyc.20552
python_web_jinja/: main.py
python_web_jinja/output/: 1.html  10.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  main.css  pagination.css
python_web_jinja/templates/: index.html
